Contrast fixed

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,5 @@
-$primary-color: #586f7c;
-$text-color: #d3d0cb;
+$primary-color: #6B7A85;
+$text-color: #ECE9E4;
 $card-color: #344966;
 
 @import 'navbar';
